# converse-os

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  plan.md  pyproject.toml
scripts/: generate-keys.sh  init-dbs.sh  seed.py  setup-dev.sh
services/agent-service/: Dockerfile  alembic.ini  pyproject.toml
services/agent-service/alembic/: env.py
services/agent-service/src/agent_service/: main.py
services/api-gateway/: Dockerfile  pyproject.toml
services/audit-service/: Dockerfile  alembic.ini  pyproject.toml
services/audit-service/alembic/: env.py
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/org-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/org-service/alembic/: env.py
services/org-service/src/org_service/: main.py
services/org-service/src/org_service/api/v1/: org_controller.py
services/org-service/src/org_service/application/commands/: create_org.py
services/org-service/src/org_service/application/dto/: org_dto.py
services/org-service/src/org_service/config/: settings.py
services/org-service/src/org_service/domain/entities/: organization.py
services/org-service/src/org_service/domain/events/: org_events.py
services/org-service/src/org_service/domain/repositories/: org_repo.py
services/org-service/src/org_service/infrastructure/persistence/: models.py  org_repo_impl.py
services/org-service/tests/unit/: test_org_domain.py
services/user-service/: Dockerfile  alembic.ini  pyproject.toml
services/user-service/alembic/: env.py
(+50 files in other folders)
