[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-service"
version = "0.1.0"
description = "Converse AI Platform — Organization Service"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "converse-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/org_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.mypy]
python_version = "3.13"
strict = true
